--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body{
 
 .container{
     position: relative;
-    width: 100%;
-    max-width: 1000px;
+    width: 1000px;
     min-height: 1000px;
     background: white;
     margin: 50px;
